--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
   vector_math: ^2.0.8
+  flutter_local_notifications: ^0.9.1+3
 
 dev_dependencies:
   flutter_test:
